--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@chartisan/chartjs": "^2.1.0",
+        "@chartisan/node": "^1.3.0",
+        "chart.js": "^2.9.4"
     }
 }
