--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "livewire/livewire": "^2.3",
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^4.1",
-        "spatie/laravel-permission": "^3.18"
+        "spatie/laravel-permission": "^3.18",
+        "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
